--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -4,7 +4,7 @@ type: blog
 teaserlatest: first/first.jpg
 teaserlist: first/first.jpg
 title: Перша публікація
-meta: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу піблцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт ..."
+meta: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу піблцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
 author: Євген Короткий
 date: 2018-12-30 
 category: news
@@ -12,16 +12,16 @@ category: news
 
 ### ![](/img/blog/first/first.jpg)
 
-Привіт, друзі! Нарешті ми створили сайт і публікуємо перший запис у блозі! Так склалося, що маємо досвід в електроніці, прототипуванні, вбудованих системах, проектуванні міркосхем, тощо, а от у веб програмуванні експертиза невелика. Тому довелося самостійно розбиратися. Побачимо, що з того вийшло.
+Привіт, друзі! Нарешті ми створили сайт і публікуємо перший запис у блозі! Так склалося, що маємо досвід в електроніці, прототипуванні, вбудованих системах, проектуванні міркосхем, а от у веб програмуванні експертиза невелика. Тому довелося самостійно розбиратися. Побачимо, що з того вийшло.
 
 ### Технології
 
 Вирішили створити статичний сайт на Jekyll + Bootstrap + GitHub Pages. Такий підхід має ряд переваг:
-1. Безкоштовний і надійний хостинг на GitHub, до якого можна прикрутити власний домен
-2. Можливість захищеного https з'єднання для користувачів GitHub Pages
-3. Оновлення сторінки через GitHub з контролем версій
-4. Готові симпатичні шаблони на Bootstrap + Jekyll
-5. Багато **[Jekyll плагінів](https://github.com/planetjekyll/awesome-jekyll-plugins)**
+1. - Безкоштовний і надійний хостинг на GitHub, до якого можна прикрутити власний домен
+2. - Можливість захищеного https з'єднання для користувачів GitHub Pages
+3. - Оновлення сторінки через GitHub з контролем версій
+4. - Готові симпатичні шаблони на Bootstrap + Jekyll
+5. - Багато **[Jekyll плагінів](https://github.com/planetjekyll/awesome-jekyll-plugins)**
 
 Загалом виходить просто і зручно
 
