--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -10,7 +10,7 @@ date: 2018-12-30
 category: news
 ---
 
-### ![](/img/blog/first/first.jpg)
+![](/img/blog/first/first.jpg)
 
 Привіт, друзі! Нарешті ми створили сайт і публікуємо перший запис у блозі! Так склалося, що маємо досвід в електроніці, прототипуванні, вбудованих системах, проектуванні міркосхем, а от у веб програмуванні експертиза невелика. Тому довелося самостійно розбиратися. Побачимо, що з того вийшло.
 
