--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -34,3 +34,7 @@ category: news
 ### Плани на майбутнє
 
 В новому році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
+
+<style type="text/css">
+    ul { list-style-type: circle; }
+</style>
