--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -36,5 +36,5 @@ category: news
 В новому році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
 
 <style type="text/css">
-    ul { list-style-type: disk; }
+    ul { list-style-type: disk; color: black;}
 </style>
