--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -36,5 +36,19 @@ category: news
 В новому році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
 
 <style type="text/css">
-    ul { list-style-type: "•";}
+    ul {   
+            list-style: none; /* Remove list bullets */
+            padding: 0;
+            margin: 0;
+       }
+
+    li { 
+            padding-left: 16px; 
+       }
+
+    li:before {
+            content: "•"; /* Insert content that looks like bullets */
+            padding-right: 8px;
+            color: black;
+    }
 </style>
