--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -17,11 +17,11 @@ category: news
 ### Технології
 
 Вирішили створити статичний сайт на Jekyll + Bootstrap + GitHub Pages. Такий підхід має ряд переваг:
-* Безкоштовний і надійний хостинг на GitHub, до якого можна прикрутити власний домен
-* Можливість захищеного https з'єднання для користувачів GitHub Pages
-* Оновлення сторінки через GitHub з контролем версій
-* Готові симпатичні шаблони на Bootstrap + Jekyll
-* Багато **[Jekyll плагінів](https://github.com/planetjekyll/awesome-jekyll-plugins)**
+1. Безкоштовний і надійний хостинг на GitHub, до якого можна прикрутити власний домен
+2. Можливість захищеного https з'єднання для користувачів GitHub Pages
+3. Оновлення сторінки через GitHub з контролем версій
+4. Готові симпатичні шаблони на Bootstrap + Jekyll
+5. Багато **[Jekyll плагінів](https://github.com/planetjekyll/awesome-jekyll-plugins)**
 
 Загалом виходить просто і зручно
 
@@ -34,21 +34,3 @@ category: news
 ### Плани на майбутнє
 
 В новому році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
-
-<style type="text/css">
-    ul {   
-            list-style: none; /* Remove list bullets */
-            padding: 0;
-            margin: 0;
-       }
-
-    li { 
-            padding-left: 16px; 
-       }
-
-    li:before {
-            content: "•"; /* Insert content that looks like bullets */
-            padding-right: 8px;
-            color: black;
-    }
-</style>
