--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -14,7 +14,7 @@ category: news
 
 Привіт, друзі! Нарешті ми створили сайт і публікуємо перший запис у блозі! Так склалося, що маємо досвід в електроніці, прототипуванні, вбудованих системах, проектуванні міркосхем, а от у веб програмуванні експертиза невелика. Тому довелося самостійно розбиратися. Побачимо, що з того вийшло.
 
-### Технології
+## Технології
 
 Вирішили створити статичний сайт на Jekyll + Bootstrap + GitHub Pages. Такий підхід має ряд переваг:
 1. Безкоштовний і надійний хостинг на GitHub, до якого можна прикрутити власний домен
@@ -27,10 +27,10 @@ category: news
 
 Вихідний код нашого сайту зберігається на **[GitHub](https://github.com/LampaLab/lampalab.github.io)**
 
-### Допомога
+## Допомога
 
 Будемо дуже вдячні за зворотній зв'язок з порадами, що і як можна покращити на сайті. Поради можна писати, як у коментарях до публікації, так і у повідомлення **[нашої FB сторінки](https://www.facebook.com/lampa.kpi/)**
 
-### Плани на майбутнє
+## Плани на майбутнє
 
 В новому році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
