--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -5,8 +5,8 @@ teaserlatest: first/first.jpg
 teaserlist: first/first.jpg
 image: /img/blog/first/first.jpg
 title: Перша публікація
-meta: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу піблцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
-description: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу піблцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
+meta: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу публцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
+description: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу публцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
 author: Євген Короткий
 date: 2018-12-30 
 category: news
