--- a/_posts/projects/2019-01-06-gestus.md
+++ b/_posts/projects/2019-01-06-gestus.md
@@ -1,8 +1,8 @@
 ---
 layout: project_post
 type: project
-projectimg: iota_hardware_accelerator/gestus_thumb.jpg
-image: /img/projects/iota_hardware_accelerator/gestus.jpg
+projectimg: gestus/gestus_thumb.jpg
+image: /img/gestus/iota_hardware_accelerator/gestus.jpg
 title: Gestus - керування моделями за допомогою жестів
 meta: "Проект Олександра Бівзюка, що дає можливітсь керувати RC моделями за допомогою жестів"
 description: "Проект Олександра Бівзюка, що дає можливітсь керувати RC моделями за допомогою жестів"
