--- a/_posts/projects/2018-12-30-gestus.md
+++ b/_posts/projects/2018-12-30-gestus.md
@@ -16,7 +16,7 @@ category: [DIY]
 Розробку було випробувано для керування рухомою платформою і квадрокоптером.
 
 
-Відео роботи першого прототипу
+**Відео роботи першого прототипу**
 
 <iframe src="https://www.youtube.com/embed/TNnZlPI6nLk" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
 
