--- a/_posts/projects/2018-12-30-gestus.md
+++ b/_posts/projects/2018-12-30-gestus.md
@@ -13,13 +13,13 @@ category: [DIY]
 
 <iframe src="https://www.youtube.com/embed/GbsCBp879Pw" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
 
-Розробку було випробувано для керування рухомою платформою і квадрокоптером.
+Розробку було випробувано для керування рухомою платформою і квадрокоптером
 
 
 **Відео роботи першого прототипу**
 
 <iframe src="https://www.youtube.com/embed/TNnZlPI6nLk" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
 
-А ось Саша керує квадрокоптером на фестивалітехнічної творчості Kyiv Maker Faire
+А ось Саша керує квадрокоптером на фестивалі технічної творчості Kyiv Maker Faire
 
 <iframe src="https://www.youtube.com/embed/yxwh5NWTEy0" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
