--- a/_posts/projects/2019-01-03-p3steel.md
+++ b/_posts/projects/2019-01-03-p3steel.md
@@ -7,7 +7,7 @@ title: P3Steel
 meta: "Саморобний 3D принтер зі сталевою рамою"
 description: "Саморобний 3D принтер зі сталевою рамою"
 author: Євген Короткий
-date: 2018-12-29
+date: 2019-01-03
 category: [DIY, 3Dprint]
 ---
 
@@ -23,11 +23,11 @@ category: [DIY, 3Dprint]
 
 Інструкції по налаштуванню Marlin та по підготовці до першого друку: **[раз](http://solidutopia.com/marlin-firmware-user-guide-basic/){:target="_blank"}**, **[два](https://www.my-home-fab.de/en/documentations/reprap-firmware/installing-marlin-firmware-on-ramps-1.4){:target="_blank"}**, **[три](http://3dtoday.ru/blogs/akdzg/custom-firmware-marlin-and-pour-it-into-a-3d-printer/){:target="_blank"}**, **[чотири](https://reprap.org/wiki/Prusa_i3_Rework_Firmware/ru){:target="_blank"}**, **[п'ять](https://null-b.blogspot.com/2013/10/3d-reprap-5.html){:target="_blank"}**
 
-Величезна подяка людям, без яких цей принтер не з'явився б на світ. Дмитру Гнатюку за те, що вирізва сталеву раму принтера на потужному лазерному верстаті. Андрію Маленко за безкоштовну друк більшої частини пластикових деталей. Дмитру Джулаю за безкоштовний друк кріплення екструдера. Саші Єфімову за хороший блок живлення.
+Величезна подяка людям, без яких цей принтер не з'явився б на світ. Дмитру Гнатюку за те, що вирізав сталеву раму принтера на потужному лазерному верстаті. Андрію Маленко за безкоштовний друк більшої частини пластикових деталей. Дмитру Джулаю за безкоштовний друк кріплення екструдера. Саші Єфімову за хороший блок живлення.
 
-Також дуже дякуємо Дмитру Джулаю, Дмитру Гнатюка та Олексію Балашову за консультації щодо вибору елементів конструкції і місць їх покупки.
+Також дуже дякуємо Дмитру Джулаю, Дмитру Гнатюку та Олексію Балашову за консультації щодо вибору елементів конструкції і місць їх придбання.
 
-По грошах в 2016 році вклалися в 5000 грн. 
+По грошах в 2016-му році вклалися в 5000 грн. 
 
-Це був наш перший 3D принтер. Безкоштовно надрукували на ньому величезну кількість деталей для відвідувачів. Зараз у нас з'явилися швидкі, точні і прості у використанні 3D принтери Ultimaker 2+. Тож цей принтер більшу частину часу відпочиває.
+Це був наш перший 3D принтер. Безкоштовно надрукували на ньому величезну кількість деталей для відвідувачів. Зараз у нас з'явилися швидкі, точні і прості у використанні 3D принтери Ultimaker 2+. Тож цей принтер більшу частину часу вже відпочиває.
 
