--- a/_posts/projects/2019-01-03-p3steel.md
+++ b/_posts/projects/2019-01-03-p3steel.md
@@ -1,8 +1,8 @@
 ---
 layout: project_post
 type: project
-projectimg: p3steel/p3steel.jpeg
-image: /img/p3steel/p3steel.jpeg
+projectimg: p3steel/p3steel.jpg
+image: /img/p3steel/p3steel.jpg
 title: P3Steel
 meta: "Саморобний 3D принтер зі сталевою рамою"
 description: "Саморобний 3D принтер зі сталевою рамою"
