--- a/_posts/projects/2018-12-29-printer.md
+++ b/_posts/projects/2018-12-29-printer.md
@@ -2,7 +2,7 @@
 layout: project_post
 type: project
 projectimg: printer/printer.jpg
-image: /img/printer/printer.jpg
+image: /img/projects/printer/printer.jpg
 title: Саморобний матричний принтер
 meta: "Саморобний матричний принтер з деталей для старих дисководів і власним блоком керування на мікропроцесорі"
 description: "Саморобний матричний принтер з деталей для старих дисководів і власним блоком керування на мікропроцесорі"
@@ -13,4 +13,4 @@ category: [DIY]
 
 <iframe src="https://www.youtube.com/embed/0u8U6Vut390" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
 
-Олександр Скопець створив саморобний матричний принтер з деталей для старих дисководів. Пристрій може друкувати будь яким маркером чи ручкою. Існує можливість друкувати графічні файли (картинки і фотографії). Саша розробив програму, що отримує картинку і створює програму керування для створеного пристрою!
+Олександр Скопець створив саморобний матричний принтер з деталей для старих дисководів. Пристрій може друкувати будь яким маркером чи ручкою. Існує можливість друкувати графічні файли (картинки і фотографії). Саша розробив програму, що отримує картинку і створює програму керування для розробленого принтеру!
