--- a/_posts/projects/2019-01-02-p3steel.md
+++ b/_posts/projects/2019-01-02-p3steel.md
@@ -2,7 +2,7 @@
 layout: project_post
 type: project
 projectimg: p3steel/p3steel.jpg
-image: /img/p3steel/p3steel.jpg
+image: /img/projects/p3steel/p3steel.jpg
 title: P3Steel
 meta: "Саморобний 3D принтер зі сталевою рамою"
 description: "Саморобний 3D принтер зі сталевою рамою"
