--- a/_posts/projects/2018-12-30-gestus.md
+++ b/_posts/projects/2018-12-30-gestus.md
@@ -2,7 +2,7 @@
 layout: project_post
 type: project
 projectimg: gestus/gestus_thumb.jpg
-image: /img/gestus/gestus.jpg
+image: /img/projects/gestus/gestus.jpg
 title: Gestus - керування моделями за допомогою жестів
 meta: "Проект Олександра Бівзюка, що дає можливітсь керувати RC моделями за допомогою жестів"
 description: "Проект Олександра Бівзюка, що дає можливітсь керувати RC моделями за допомогою жестів"
