--- a/_posts/projects/2018-12-28-stalker3D.md
+++ b/_posts/projects/2018-12-28-stalker3D.md
@@ -6,7 +6,7 @@ image: /img/projects/stalker3D/stalker3D.jpg
 title: Пристрій Сталкера
 meta: "Корпус надрукований на 3D принтері"
 description: "Пристрій Сталкера. Корпус надрукований на 3D принтері"
-author: Євген Короткий
+author: Максим Шеремет
 date: 2018-12-28
 category: [DIY, 3Dprint]
 ---
