--- a/_posts/projects/2018-12-29-printer.md
+++ b/_posts/projects/2018-12-29-printer.md
@@ -6,7 +6,7 @@ image: /img/projects/printer/printer.jpg
 title: Саморобний матричний принтер
 meta: "Саморобний матричний принтер з деталей для старих дисководів і власним блоком керування на мікропроцесорі"
 description: "Саморобний матричний принтер з деталей для старих дисководів і власним блоком керування на мікропроцесорі"
-author: Євген Короткий
+author: Олександр Скопець
 date: 2018-12-29
 category: [DIY]
 ---
