--- a/_posts/projects/2018-12-30-gestus.md
+++ b/_posts/projects/2018-12-30-gestus.md
@@ -6,7 +6,7 @@ image: /img/projects/gestus/gestus.jpg
 title: Gestus - керування моделями за допомогою жестів
 meta: "Проект Олександра Бівзюка, що дає можливітсь керувати RC моделями за допомогою жестів"
 description: "Проект Олександра Бівзюка, що дає можливітсь керувати RC моделями за допомогою жестів"
-author: Євген Короткий
+author: Олександр Бівзюк
 date: 2018-12-30
 category: [DIY]
 ---
