--- a/_posts/projects/2018-12-29-printer.md
+++ b/_posts/projects/2018-12-29-printer.md
@@ -8,7 +8,7 @@ meta: "Саморобний матричний принтер з деталей 
 description: "Саморобний матричний принтер з деталей для старих дисководів і власним блоком керування на мікропроцесорі"
 author: Олександр Скопець
 date: 2018-12-29
-category: [DIY]
+category: [diy]
 ---
 
 <iframe src="https://www.youtube.com/embed/0u8U6Vut390" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
