--- a/_posts/projects/2019-01-02-p3steel.md
+++ b/_posts/projects/2019-01-02-p3steel.md
@@ -8,7 +8,7 @@ meta: "Саморобний 3D принтер зі сталевою рамою"
 description: "Саморобний 3D принтер зі сталевою рамою"
 author: Євген Короткий
 date: 2019-01-02
-category: [DIY, 3Dprint]
+category: [diy, 3Dprint]
 ---
 
 <iframe src="https://www.youtube.com/embed/76-veLcDYP4" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
