--- a/_posts/projects/2018-12-28-stalker3D.md
+++ b/_posts/projects/2018-12-28-stalker3D.md
@@ -8,7 +8,7 @@ meta: "Корпус надрукований на 3D принтері"
 description: "Пристрій Сталкера. Корпус надрукований на 3D принтері"
 author: Максим Шеремет
 date: 2018-12-28
-category: [DIY, 3Dprint]
+category: [diy, 3Dprint]
 ---
 
 ![Пристрій Сталкера. Корпус надрукований на 3D принтері](/img/projects/stalker3D/stalker3D.jpg)
