--- a/_posts/projects/2018-12-28-stalker3D.md
+++ b/_posts/projects/2018-12-28-stalker3D.md
@@ -13,4 +13,4 @@ category: [diy, 3Dprint]
 
 ![Пристрій Сталкера. Корпус надрукований на 3D принтері](/img/projects/stalker3D/stalker3D.jpg)
 
-Щодня відвідувачі друкують у нас деталі на 3Dпринтерах Ultimaker 2+. Ось приклад одного з проектів. **[Максим Шеремет](https://www.facebook.com/maxim.sheremet.1){:target="_blank"}** надрукував у нас шмкарний корпус для пристрою Сталкера на Comic Con. Деталі реалізації можна дізнатися напряму у автора.
+Щодня відвідувачі друкують у нас деталі на 3D принтерах Ultimaker 2+. Ось приклад одного з проектів. **[Максим Шеремет](https://www.facebook.com/maxim.sheremet.1){:target="_blank"}** надрукував у нас шикарний корпус пристрою Сталкера на Comic Con. Деталі реалізації можна дізнатися у автора.
