--- a/_posts/projects/2018-12-27-detector.md
+++ b/_posts/projects/2018-12-27-detector.md
@@ -13,7 +13,7 @@ category: [diy, labview]
 
 <iframe src="https://www.youtube.com/embed/6b_En1RjAtw" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
  
-Цікавий проект, який розробив наш лаборант Олександр Махньов для курсу "Вимірювальні перетворювачі фізичних величин" на **[Кафедрі КЕОА, ФЕЛ, НТУУ "КПІ імені І. Сікорського"](http://keoa.kpi.ua){:target="_blank"}**
+Цікавий проект розробив наш лаборант Олександр Махньов для курсу "Вимірювальні перетворювачі фізичних величин" на **[Кафедрі КЕОА, ФЕЛ, НТУУ "КПІ імені І. Сікорського"](http://keoa.kpi.ua){:target="_blank"}**
 
 Це вимірювач температурного ходу сцинтиляційних детекторів іонізуючих випромінювань, що дозволяє визначити залежність показів сцинтиляційного радіаційного детектору від температури і врахувати пов'язану з цим похибку вимірювань.
 
@@ -21,6 +21,4 @@ category: [diy, labview]
 
 В цьому ж проекті Саша створив термокамеру зі стабільним рівномірним прогрівом та можливістю точно задавати температуру, а також розробив систему керування експериментом з використанням Labview.
 
-Що з того вийшло, можете спостерігати на відео :)
-
-Вихідний код проекту можна завантажити з **[GitGub](https://github.com/AMahno/Scintillators){:target="_blank"}** 
+Вихідний код проекту можна завантажити з **[GitHub](https://github.com/AMahno/Scintillators){:target="_blank"}** 
