--- a/_posts/projects/2018-12-27-dendy.md
+++ b/_posts/projects/2018-12-27-dendy.md
@@ -4,7 +4,7 @@ type: project
 projectimg: dendy/dendy.jpg
 image: /img/projects/dendy/dendy.jpg
 title: Апаратний клон приставки Dendy
-meta: "Апаратний клон ігрової приставки Dendy на FPGA, а також сенсорний джойстик із фуктів"
+meta: "Апаратний клон ігрової приставки Dendy на FPGA, а також сенсорний джойстик із фруктів"
 description: "Апаратний клон ігрової приставки Dendy з джойстиком із фруктів, що реалізований на FPGA та Arduino"
 author: Олег Заїченко
 date: 2018-12-27
