--- a/_posts/projects/2018-12-28-detector.md
+++ b/_posts/projects/2018-12-28-detector.md
@@ -8,12 +8,12 @@ meta: "Вимірювач температурного ходу сцинтиля
 description: "Вимірювач температурного ходу сцинтиляційних детекторів іонізуючих випромінювань, що дозволяє визначити залежність показів сцинтиляційного радіаційного детектору від температури і врахувати пов'язану з цим похибку вимірювань"
 author: Олександр Махньов
 date: 2018-12-28
-category: [diy, labview]
+category: [diy, labview, analog]
 ---
 
 <iframe src="https://www.youtube.com/embed/6b_En1RjAtw" width="700" height="480" frameborder="0" allowfullscreen=""> </iframe>
  
-Цікавий проект розробив наш лаборант Олександр Махньов для курсу "Вимірювальні перетворювачі фізичних величин" на **[Кафедрі КЕОА, ФЕЛ, НТУУ "КПІ імені І. Сікорського"](http://keoa.kpi.ua){:target="_blank"}**
+Цікавий проект розробив наш лаборант **[Олександр Махньов](https://www.facebook.com/aleksander.mahnyov){:target="_blank"}** для курсу "Вимірювальні перетворювачі фізичних величин" на **[Кафедрі КЕОА, ФЕЛ, НТУУ "КПІ імені І. Сікорського"](http://keoa.kpi.ua){:target="_blank"}**
 
 Це вимірювач температурного ходу сцинтиляційних детекторів іонізуючих випромінювань, що дозволяє визначити залежність показів сцинтиляційного радіаційного детектору від температури і врахувати пов'язану з цим похибку вимірювань.
 
