--- a/_posts/blog/2018-12-30-first.md
+++ b/_posts/blog/2018-12-30-first.md
@@ -5,8 +5,8 @@ teaserlatest: first/first.jpg
 teaserlist: first/first.jpg
 image: /img/blog/first/first.jpg
 title: Перша публікація
-meta: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу публцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
-description: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу публцікацію в блозі. Розкажемо трошки про технології на базі яких створено наш сайт і про плани на майбутнє"
+meta: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу публікацію в блозі. Розкажемо про технології на базі яких створено сайт і про плани на майбутнє"
+description: "Вітаємо, друзі! Нарешті ми створили сайт і робимо першу публікацію в блозі. Розкажемо про технології на базі яких створено сайт і про плани на майбутнє"
 author: Євген Короткий
 date: 2018-12-30 
 category: news
@@ -14,7 +14,7 @@ category: news
 
 ![](/img/blog/first/first.jpg)
 
-Привіт, друзі! Нарешті ми створили сайт і публікуємо перший запис у блозі! Так склалося, що маємо досвід в електроніці, прототипуванні, вбудованих системах, проектуванні міркосхем, а от у веб програмуванні експертиза невелика. Тому довелося самостійно розбиратися. Побачимо, що з того вийшло.
+Привіт, друзі! Нарешті ми створили сайт і публікуємо перший запис у блозі! Так склалося, що маємо досвід в електроніці, прототипуванні, вбудованих системах, проектуванні міркосхем, а от у веб програмуванні та дизайні експертиза невелика. Тому довелося самостійно розбиратися. Побачимо, що з того вийшло.
 
 ### Технології
 
@@ -35,4 +35,4 @@ category: news
 
 ### Плани на майбутнє
 
-В новому році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
+В 2019 році плануємо продовжувати наповнювати розділи сайту контентом і писати статті у блозі та тематику FPGA та SDR
